--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,7 +34,7 @@
     </ul>
     <ul class="navbar-nav navbar-right">
     	<li class="nav-item">
-    		<a class="nav-link" href="#" id="rules-faq"><h4 class="faq">RULES / FAQ</h4></a>
+    		<a class="nav-link" href="#" id="rules-faq"><h4 class="faq">RULES & FAQ</h4></a>
     	</li>
     	<li class="nav-item">
     		<a class="nav-link" href="#" id="reg" onclick="regScroll()"><h4 class="register-header">REGISTER</h4></a>
